--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/node16/tsconfig.json",
   "compilerOptions": {
+    "module": "commonjs",
     "outDir": "javascript_build",
     "typeRoots": [
   "./node_modules/@types",
